--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.mycompany</groupId>
     <artifactId>ATM</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -74,31 +74,6 @@
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-               <artifactId>maven-assembly-plugin</artifactId>
-               <executions>
-                   <execution>
-                       <id>build-atm</id>
-                       <configuration>
-                           <outputDirectory>${project.build.directory}</outputDirectory>
-                           <appendAssemblyId>false</appendAssemblyId>
-                           <archive>
-                               <manifest>
-                                   <mainClass>com.mycompany.atm.Main</mainClass>
-                               </manifest>
-                           </archive>
-                           <descriptorRefs>
-                               <descriptorRef>jar-with-dependencies</descriptorRef>
-                           </descriptorRefs>
-                           <finalName>ATM-${project.version}</finalName>
-                       </configuration>
-                       <phase>package</phase>
-                       <goals>
-                           <goal>single</goal>
-                       </goals>
-                   </execution>
-               </executions>
-           </plugin>
            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
