--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-logging.level.root=OFF
+logging.level.root=INFO
 server.error.whitelabel.enabled=false
 
 ## default connection pool
