- Changed README - Added dependencies for junit & h2 db for testing - Added 10 testunit - Fixed amount sign - Fixed last 10 transaction history - Fixed account availability check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-logging.level.root=INFO
+logging.level.root=OFF
 server.error.whitelabel.enabled=false
 
 ## default connection pool
